--- a/templates/security/authorization/user/_actions.html.twig
+++ b/templates/security/authorization/user/_actions.html.twig
@@ -3,7 +3,7 @@
 
 <a href="{{ path('grr_admin_user_show',{'id': user.id}) }}" class="btn btn-primary" role='button'><i
             class="fas fa-arrow-left"></i>
-    {{ 'link.back.touser'|trans({}, 'actions') }}
+    {{ 'room.back.touser'|trans({}, 'actions') }}
 </a>
 
 <br/>
