--- a/templates/security/authorization/area/_actions.html.twig
+++ b/templates/security/authorization/area/_actions.html.twig
@@ -1,4 +1,4 @@
-<a href="{{ path('grr_authorization_area_from_area', { 'area': area.id }) }}" role="button"
+<a href="{{ path('grr_authorization_from_area', { 'id': area.id }) }}" role="button"
    class="btn btn-primary"><i class="fas fa-plus"></i> {{ 'form.btn.new'|trans({}, 'actions') }}</a>
 
 <a href="{{ path('grr_admin_area_show',{'id': area.id}) }}" class="btn btn-primary" role='button'><i
