--- a/templates/security/authorization/area/new.html.twig
+++ b/templates/security/authorization/area/new.html.twig
@@ -1,19 +1,19 @@
 {% extends '@grr_admin/layout_admin.html.twig' %}
 
-{% block title %}{{'authorization.user.new.title'|trans}}{% endblock %}
+{% block title %}{{'authorization.area.title'|trans}}{% endblock %}
 
 {% block body %}
     <div class="card bg-light mb-3">
         <div class="card-header">
-            <h3>{{ 'authorization.user.new.title'|trans }} {{ user }}</h3>
+            <h3>{{ 'authorization.area.new.title'|trans }} {{ area }}</h3>
         </div>
 
         <div class="card-body">
-            {{ include('security/authorization_area/_form.html.twig') }}
+            {{ include('security/authorization/_form.html.twig') }}
         </div>
     </div>  <br />
 
-    <a href="{{ path('grr_authorization_show_by_user',{'id': user.id}) }}">
+    <a href="{{ path('grr_authorization_area_show',{'id': area.id}) }}">
         <i class="fas fa-arrow-left"></i> {{ 'form.btn.cancel'|trans({}, 'actions') }}</a>
 
 {% endblock %}
