--- a/templates/security/authorization/room/_actions.html.twig
+++ b/templates/security/authorization/room/_actions.html.twig
@@ -1,9 +1,9 @@
-<a href="{{ path('grr_authorization_resource_from_room', { 'room': room.id }) }}" role="button"
+<a href="{{ path('grr_authorization_from_room', { 'id': room.id }) }}" role="button"
    class="btn btn-primary"><i class="fas fa-plus"></i> {{ 'form.btn.new'|trans({}, 'actions') }}</a>
 
 <a href="{{ path('grr_admin_room_show',{'id': room.id}) }}" class="btn btn-primary" role='button'><i
             class="fas fa-list"></i>
-    {{ 'room.back.toarea'|trans({}, 'actions') }}
+    {{ 'room.back.toroom'|trans({}, 'actions') }}
 </a>
 
 <br/>
