--- a/templates/security/authorization/room/new.html.twig
+++ b/templates/security/authorization/room/new.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
     <div class="card bg-light mb-3">
         <div class="card-header">
-            <h3>{{ 'authorization.room.new.title'|trans }}  {{ area }}</h3>
+            <h3>{{ 'authorization.room.new.title'|trans }}  {{ room }}</h3>
         </div>
 
         <div class="card-body">
