--- a/templates/security/authorization/room/show.html.twig
+++ b/templates/security/authorization/room/show.html.twig
@@ -6,7 +6,7 @@
 
     <div class="card bg-light mb-3">
         <div class="card-header">
-            <h3>{{ 'authorization.room.title'|trans() }} {{ area }}</h3>
+            <h3>{{ 'authorization.room.title'|trans() }} {{ room }}</h3>
         </div>
 
         <div class="card-body">
