--- a/templates/security/authorization/_form.html.twig
+++ b/templates/security/authorization/_form.html.twig
@@ -1,5 +1,9 @@
 {{ form_start(form) }}
-{{ form_widget(form) }}
+{{ form_errors(form) }}
+{{ form_row(form.area) }}
+{{ form_row(form.role) }}
+{{ form_row(form.rooms) }}
+{{ form_row(form.users) }}
 
 <button class="btn btn-primary" type="submit"><i class="far fa-save"></i> {{ button_label|default('form.btn.save')|trans({}, 'actions') }}</button>
 
