--- a/templates/security/authorization/room/_actions.html.twig
+++ b/templates/security/authorization/room/_actions.html.twig
@@ -1,4 +1,4 @@
-<a href="{{ path('grr_authorization_from_room', { 'id': room.id }) }}" role="button"
+<a href="{{ path('grr_authorization_from_area', { 'id': room.area.id }) }}" role="button"
    class="btn btn-primary"><i class="fas fa-plus"></i> {{ 'form.btn.new'|trans({}, 'actions') }}</a>
 
 <a href="{{ path('grr_admin_room_show',{'id': room.id}) }}" class="btn btn-primary" role='button'><i
