authorization before test

--- a/templates/security/authorization/_delete_form.html.twig
+++ b/templates/security/authorization/_delete_form.html.twig
@@ -26,6 +26,7 @@
                     <input type="hidden" name="_method" value="DELETE">
                     <input type="hidden" name="idauth" id="idauth" value="">
                     <input type="hidden" name="_tokenauth" id="tokenauth" value="">
+                    <input type="hidden" name="_urlback" id="_urlback" value="{{ url_back }}">
                     <button type="button" class="btn btn-secondary"
                             data-dismiss="modal">{{ 'form.btn.cancel'|trans({}, 'actions') }}</button>
                     <button type="submit" class="btn btn-danger">{{ 'form.btn.delete'|trans({}, 'actions') }}</button>
