--- a/templates/security/authorization/area/show.html.twig
+++ b/templates/security/authorization/area/show.html.twig
@@ -11,7 +11,7 @@
 
         <div class="card-body">
             {% include 'security/authorization/area/_actions.html.twig' %}
-            {% include 'security/authorization/_detail_permissions.html.twig' %}
+            {% include 'security/authorization/_detail_permissions.html.twig' with {'url_back': url_back} %}
         </div>
     </div>
 
