--- a/templates/admin/user/show.html.twig
+++ b/templates/admin/user/show.html.twig
@@ -3,37 +3,44 @@
 {% block title %}{{ user.name }}{% endblock %}
 
 {% block body %}
-    <h1>{{ user.email }}</h1>
 
-    {% include '@grr_admin/user/_actions.html.twig' %}
+    <div class="card bg-light mb-3">
+        <div class="card-header">
+            <h3>{{ user.email }}</h3>
+        </div>
+        <div class="card-body">
 
-    <table class="table table-bordered">
-        <tbody>
-        <tr>
-            <th>{{ 'user.form.nom.label'| trans }}</th>
-            <td>{{ user.name }}</td>
-        </tr>
-        <tr>
-            <th>{{ 'user.form.prenom.label'| trans }}</th>
-            <td>{{ user.firstName }}</td>
-        </tr>
-        <tr>
-            <th>{{ 'user.form.email.label'| trans }}</th>
-            <td>{{ user.email }}</td>
-        </tr>
-        <tr>
-            <th>{{ 'user.form.etat.label'| trans }}</th>
-            <td>{{ user.isEnabled }}</td>
-        </tr>
-        <tr>
-            <th>{{ 'entry.form.area.label'| trans }}</th>
-            <td>{{ user.areaDefault }}</td>
-        </tr>
-        <tr>
-            <th>{{ 'user.form.room.label'| trans }}</th>
-            <td>{{ user.roomDefault }}</td>
-        </tr>
-    </table>
+            {% include '@grr_admin/user/_actions.html.twig' %}
+
+            <table class="table table-bordered">
+                <tbody>
+                <tr>
+                    <th>{{ 'user.form.nom.label'| trans }}</th>
+                    <td>{{ user.name }}</td>
+                </tr>
+                <tr>
+                    <th>{{ 'user.form.prenom.label'| trans }}</th>
+                    <td>{{ user.firstName }}</td>
+                </tr>
+                <tr>
+                    <th>{{ 'user.form.email.label'| trans }}</th>
+                    <td>{{ user.email }}</td>
+                </tr>
+                <tr>
+                    <th>{{ 'user.form.etat.label'| trans }}</th>
+                    <td>{{ user.isEnabled }}</td>
+                </tr>
+                <tr>
+                    <th>{{ 'entry.form.area.label'| trans }}</th>
+                    <td>{{ user.areaDefault }}</td>
+                </tr>
+                <tr>
+                    <th>{{ 'user.form.room.label'| trans }}</th>
+                    <td>{{ user.roomDefault }}</td>
+                </tr>
+            </table>
+        </div>
+    </div>
 
     {{ include('@grr_admin/user/_delete_form.html.twig') }}
 {% endblock %}
