--- a/templates/form/grr_types.html.twig
+++ b/templates/form/grr_types.html.twig
@@ -1,4 +1,4 @@
-{% block role_select_row %}
+{% block role_select_row22 %}
     {% for child in form.children if not child.rendered %}
         <div class="form-group">
             {{ form_label(child) }}
