--- a/templates/form/grr_types.html.twig
+++ b/templates/form/grr_types.html.twig
@@ -1,3 +1,4 @@
+{# test rate #}
 {% block role_select_row22 %}
     {% for child in form.children if not child.rendered %}
         <div class="form-group">
