--- a/templates/security/authorization/_detail_permissions.html.twig
+++ b/templates/security/authorization/_detail_permissions.html.twig
@@ -4,8 +4,8 @@
         <th>{{ 'user.title'|trans }}</th>
         <th>{{ 'area.title'|trans }}</th>
         <th>{{ 'room.title'|trans }}</th>
-        <th>{{ 'area.administrator'|trans }}</th>
-        <th>{{ 'area.resource'|trans }}</th>
+        <th data-toggle="tooltip" data-placement="top"  title="{{ 'authorization.role.area.administrator.help'|trans }}">{{ 'area.administrator'|trans }}</th>
+        <th data-toggle="tooltip" data-placement="top"  title="{{ 'authorization.role.resource.administrator.help'|trans }}">{{ 'area.resource'|trans }}</th>
         <th>{{ 'actions'|trans }}</th>
     </tr>
     </thead>
