--- a/templates/admin/user/show.html.twig
+++ b/templates/admin/user/show.html.twig
@@ -22,6 +22,10 @@
                     <th>{{ 'user.form.prenom.label'| trans }}</th>
                     <td>{{ user.firstName }}</td>
                 </tr>
+                  <tr>
+                    <th>{{ 'user.form.username.label'| trans }}</th>
+                    <td>{{ user.username }}</td>
+                </tr>
                 <tr>
                     <th>{{ 'user.form.email.label'| trans }}</th>
                     <td>{{ user.email }}</td>
