--- a/templates/admin/user/_form.html.twig
+++ b/templates/admin/user/_form.html.twig
@@ -1,17 +1,20 @@
 {{ form_start(form) }}
 
 <div class="row">
-    <div class="col-6">
+    <div class="col-4">
         {{ form_row(form.name) }}
     </div>
-    <div class="col-6">
+    <div class="col-4">
         {{ form_row(form.first_name) }}
+    </div>
+    <div class="col-4">
+        {{ form_row(form.email) }}
     </div>
 </div>
 
 <div class="row">
     <div class="col-6">
-        {{ form_row(form.email) }}
+        {{ form_row(form.username) }}
     </div>
     <div class="col-6">
         {% if form.password is defined %}
