--- a/templates/admin/area/edit.html.twig
+++ b/templates/admin/area/edit.html.twig
@@ -1,6 +1,6 @@
 {% extends '@grr_admin/layout_admin.html.twig' %}
 
-{% block title %}Edit GrrArea{% endblock %}
+{% block title %}{{ area.name }}{% endblock %}
 
 {% block body %}
 
