--- a/templates/admin/area/new.html.twig
+++ b/templates/admin/area/new.html.twig
@@ -3,9 +3,16 @@
 {% block title %}{{ 'area.new.title'|trans({}, 'actions') }}{% endblock %}
 
 {% block body %}
-    <h1>{{ 'area.new.title'|trans({}, 'actions') }}</h1>
 
-    {{ include('@grr_admin/area/_form.html.twig') }}
+    <div class="card bg-light mb-3">
+        <div class="card-header">
+            <h2>{{ 'area.new.title'|trans({}, 'actions') }}</h2>
+        </div>
+        <div class="card-body">
+
+            {{ include('@grr_admin/area/_form.html.twig') }}
+        </div>
+    </div>
 
     <br/>
     <a href="{{ path('grr_admin_area_index') }}"><i
