--- a/templates/admin/area/show.html.twig
+++ b/templates/admin/area/show.html.twig
@@ -20,7 +20,7 @@
                             <th>
                                 {{ 'area.form.access.label'|trans }}
                             </th>
-                            <td>{{ area.isPrivate }}</td>
+                            <td>{{ area.isRestricted }}</td>
                         </tr>
                         <tr>
                             <th>{{ 'area.form.orderDisplay.label'|trans }}</th>
