--- a/templates/admin/room/_form.html.twig
+++ b/templates/admin/room/_form.html.twig
@@ -15,7 +15,7 @@
         {{ form_row(form.showComment) }}
         {{ form_row(form.commentRoom) }}
         {{ form_row(form.showFicRoom) }}
-        {{ form_row(form.whoCanSee) }}
+        {{ form_row(form.ruleToAdd) }}
     </div>
 </div>
 
