--- a/templates/admin/room/index.html.twig
+++ b/templates/admin/room/index.html.twig
@@ -3,28 +3,35 @@
 {% block title %}{{ 'room.index.title'|trans({}, 'actions') }}{% endblock %}
 
 {% block body %}
-    <h1>{{ 'room.index.title'|trans({}, 'actions') }}</h1>
 
-    <table class="table table-bordered">
-        <thead>
-        <tr>
-            <th>{{ 'room.form.nom.label'|trans }}</th>
-            <th>{{ 'room.form.orderDisplay.label'|trans }}</th>
-        </tr>
-        </thead>
-        <tbody>
-        {% for room in rooms %}
-            <tr>
-                <td>{{ room.area }}</td>
-                <td><a href="{{ path('grr_admin_room_show', {'id': room.id}) }}">{{ room.name }}</a></td>
-                <td>{{ room.orderDisplay }}</td>
-            </tr>
-        {% else %}
-            <tr>
-                <td colspan="3">{{ 'records.notfound'| trans({}, 'actions') }}</td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
+    <div class="card bg-light mb-3">
+        <div class="card-header">
+            <h2>{{ 'room.index.title'|trans({}, 'actions') }}</h2>
+        </div>
+        <div class="card-body">
+
+            <table class="table table-bordered">
+                <thead>
+                <tr>
+                    <th>{{ 'room.form.nom.label'|trans }}</th>
+                    <th>{{ 'room.form.orderDisplay.label'|trans }}</th>
+                </tr>
+                </thead>
+                <tbody>
+                {% for room in rooms %}
+                    <tr>
+                        <td>{{ room.area }}</td>
+                        <td><a href="{{ path('grr_admin_room_show', {'id': room.id}) }}">{{ room.name }}</a></td>
+                        <td>{{ room.orderDisplay }}</td>
+                    </tr>
+                {% else %}
+                    <tr>
+                        <td colspan="3">{{ 'records.notfound'| trans({}, 'actions') }}</td>
+                    </tr>
+                {% endfor %}
+                </tbody>
+            </table>
+        </div>
+    </div>
 
 {% endblock %}
