--- a/templates/admin/area/_form.html.twig
+++ b/templates/admin/area/_form.html.twig
@@ -42,7 +42,7 @@
 
 <div class="row">
     <div class="col-6">
-        {{ form_row(form.isPrivate) }}
+        {{ form_row(form.isRestricted) }}
     </div>
     <div class="col-6">
         {{ form_row(form.minutesToAddToEndTime) }}
