--- a/templates/admin/area/index.html.twig
+++ b/templates/admin/area/index.html.twig
@@ -3,39 +3,44 @@
 {% block title %}{{ 'area.index.title'|trans({}, 'actions') }}{% endblock %}
 
 {% block body %}
-    <h1>{{ 'area.index.title'|trans({}, 'actions') }}</h1>
+    <div class="card bg-light mb-3">
+        <div class="card-header">
+            <h2>{{ 'area.index.title'|trans({}, 'actions') }}</h2>
+        </div>
+        <div class="card-body">
 
-    <a class="btn btn-primary" href="{{ path('grr_admin_area_new') }}"><i
-                class="fas fa-plus"></i> {{ 'area.new.title'| trans({}, 'actions') }}</a>
-    <br/> <br/>
+            <a class="btn btn-primary" href="{{ path('grr_admin_area_new') }}"><i
+                        class="fas fa-plus"></i> {{ 'area.new.title'| trans({}, 'actions') }}</a>
+            <br/> <br/>
 
-    <table class="table table-bordered">
-        <thead>
-        <tr>
-            <th>{{ 'name'| trans }}</th>
-            <th>{{ 'area.form.orderDisplay.label'| trans }}</th>
-            <th>{{ 'area.form.morningstartsArea.label'| trans }}</th>
-            <th>{{ 'area.form.eveningendsArea.label'| trans }}</th>
-            <th>{{ 'area.rooms.title'| trans }}</th>
-        </tr>
-        </thead>
-        <tbody>
-        {% for area in areas %}
-            <tr>
-                <td>
-                    <a href="{{ path('grr_admin_area_show', {'id': area.id}) }}">{{ area.name }}</a>
-                </td>
-                <td>{{ area.orderDisplay }}</td>
-                <td>{{ area.startTime }}</td>
-                <td>{{ area.endTime }}</td>
-                <td>{{ area.rooms|length }}</td>
-            </tr>
-        {% else %}
-            <tr>
-                <td colspan="5">{{ 'records.notfound'| trans({}, 'actions') }}</td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
-
+            <table class="table table-bordered">
+                <thead>
+                <tr>
+                    <th>{{ 'name'| trans }}</th>
+                    <th>{{ 'area.form.orderDisplay.label'| trans }}</th>
+                    <th>{{ 'area.form.morningstartsArea.label'| trans }}</th>
+                    <th>{{ 'area.form.eveningendsArea.label'| trans }}</th>
+                    <th>{{ 'area.rooms.title'| trans }}</th>
+                </tr>
+                </thead>
+                <tbody>
+                {% for area in areas %}
+                    <tr>
+                        <td>
+                            <a href="{{ path('grr_admin_area_show', {'id': area.id}) }}">{{ area.name }}</a>
+                        </td>
+                        <td>{{ area.orderDisplay }}</td>
+                        <td>{{ area.startTime }}</td>
+                        <td>{{ area.endTime }}</td>
+                        <td>{{ area.rooms|length }}</td>
+                    </tr>
+                {% else %}
+                    <tr>
+                        <td colspan="5">{{ 'records.notfound'| trans({}, 'actions') }}</td>
+                    </tr>
+                {% endfor %}
+                </tbody>
+            </table>
+        </div>
+    </div>
 {% endblock %}
