--- a/templates/admin/room/edit.html.twig
+++ b/templates/admin/room/edit.html.twig
@@ -3,11 +3,18 @@
 {% block title %}{{ room.name }}{% endblock %}
 
 {% block body %}
-    <h1>{{ room.name }}</h1>
 
-    {{ include('@grr_admin/room/_form.html.twig', {'button_label': 'form.btn.update'}) }}
+    <div class="card bg-light mb-3">
+        <div class="card-header">
+            <h2>{{ room.name }}</h2>
+        </div>
+        <div class="card-body">
 
-    <br />
+            {{ include('@grr_admin/room/_form.html.twig', {'button_label': 'form.btn.update'}) }}
+        </div>
+    </div>
+
+    <br/>
     <a href="{{ path('grr_admin_area_show',{'id': room.area.id}) }}">
         <i class="fas fa-arrow-left"></i> {{ 'form.btn.cancel'|trans({}, 'actions') }}</a>
 
