--- a/templates/admin/room/new.html.twig
+++ b/templates/admin/room/new.html.twig
@@ -3,9 +3,15 @@
 {% block title %}{{ 'room.new.title'|trans({}, 'actions') }}{% endblock %}
 
 {% block body %}
-    <h1>{{ 'room.new.title'|trans({}, 'actions') }}</h1>
 
-    {{ include('@grr_admin/room/_form.html.twig') }}
+    <div class="card bg-light mb-3">
+        <div class="card-header">
+            <h2>{{ 'room.new.title'|trans({}, 'actions') }}</h2>
+        </div>
+        <div class="card-body">
+            {{ include('@grr_admin/room/_form.html.twig') }}
+        </div>
+    </div>
 
     <br/>
     <a href="{{ path('grr_admin_area_show', {'id':area.id}) }}"><i
